Fixed overlap in carousel for images on bottom

--- a/main.css
+++ b/main.css
@@ -235,6 +235,7 @@ a {
 
 .languages-carousel {
   margin: 2em auto;
+  padding-bottom: 0.5em;
   width: 90%;
   display: flex;
   overflow-x: auto;
